header + настройка проекта

--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,8 +1,3 @@
-$orng: #FF4713;
-$gray: #BABABA;
-
-@mixin flex-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+$main-bl: #1c1c1c;
+$grey:#c8c8c8;
+$blue: #435993;
