--- a/src/css/_fonts.scss
+++ b/src/css/_fonts.scss
@@ -1,8 +1,31 @@
-// @font-face {
-//     font-family: "TTNorms";
-//     src: url("../fonts/TTNorms-Black.woff") format("woff"),
-//     url("../fonts/TTNorms-Black.woff2") format("woff2");
-//     font-display: swap;
-//     font-weight: 900;
-//     font-style: normal;
-// }
+
+@font-face {
+    font-family: "Roboto";
+    src:
+      url("../fonts/roboto-regular.woff") format("woff"),
+      url("../fonts/roboto-regular.woff2") format("woff2");
+    font-display: swap;
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: "Roboto";
+    src:
+      url("../fonts/roboto-thin.woff") format("woff"),
+      url("../fonts/roboto-thin.woff2") format("woff2");
+    font-display: swap;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: "Roboto";
+    src:
+      url("../fonts/roboto-light.woff") format("woff"),
+      url("../fonts/roboto-light.woff2") format("woff2");
+    font-display: swap;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
