--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-	font-family: 'TTNorms', serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 14px;
     color: #000;
@@ -25,23 +25,7 @@ body {
     }
 }
 
-// .block {
-//     display: none;
-//     content: '';
-//     width: 100%;
-//     min-height: 100%;
-//     height: 100%;
-//     position: fixed;
-//     left: 0;
-//     top: 0;
-//     z-index: 100;
-//     background-color: #F6F6F6;
-//     opacity: 0.8;
 
-//     &.active {
-//         display: block;
-//     }
-// }
 
 h1,
 h2,
@@ -58,19 +42,15 @@ a {
     display: inline-block;
     text-decoration: none;
     color: #000;
-
-    &.button {
-        display: block;
-        max-width: max-content;
-        width: 100%;
-    }
 }
 
 p {
     margin: 0;
 }
 
-ul, ol, li {
+ul,
+ol,
+li {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -92,9 +72,7 @@ svg {
     }
 }
 
-.title {
 
-}
 
 
 .wrapper {
@@ -121,9 +99,9 @@ svg {
 }
 
 .container {
-    // max-width: 392px;
+    max-width: 1170px;
     width: 100%;
-    padding: 0 16px 0;
+    padding: 0 15px 0;
     margin: 0 auto;
 }
 
