--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,3 +1,20 @@
 <header class="header">
-	
+	<div class="container">
+        <nav class="header__nav">
+            <ul class="header__list">
+                <li class="header__list-item">
+                    <a href="#" class="header__list-link _active">Личная Информация</a>
+                </li>
+                <li class="header__list-item">
+                    <a href="#" class="header__list-link">Опыт</a>
+                </li>
+                <li class="header__list-item">
+                    <a href="#" class="header__list-link">JavaScript</a>
+                </li>
+                <li class="header__list-item">
+                    <a href="#" class="header__list-link">О себе</a>
+                </li>
+            </ul>        
+        </nav>
+    </div>
 </header>
