--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,6 +1,12 @@
 <header class="header">
 	<div class="container">
+        
         <nav class="header__nav">
+            <div class="header__burger">
+                <span class="header__burger-item"></span>
+                <span class="header__burger-item"></span>
+                <span class="header__burger-item"></span>
+            </div>
             <ul class="header__list">
                 <li class="header__list-item">
                     <a href="#" class="header__list-link _active">Личная Информация</a>
