--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,20 +2,27 @@
 @import "global";
 @import "fonts";
 
-// @import "media";
+
+//////////////////////////////////////////////////  HEADER 
+
 .header {
-    height: 80px;
+    min-height: 80px;
     border-bottom: 1px solid #d9d9d9;
-    ;
+
 }
 
 .header__nav {
+    position: relative;
     padding-top: 35px;
 }
 
 .header__list {
     display: flex;
     justify-content: center;
+
+    &.active-list {
+        display: flex;
+    }
 
     margin-left: -75px;
 }
@@ -34,3 +41,497 @@
         color: $main-bl;
     }
 }
+
+.header__burger {
+    display: none;
+    position: relative;
+    top: 50%;
+    right: 0%;
+    height: 40px;
+}
+
+
+.header__burger-item {
+
+    margin: 5px;
+    display: block;
+    width: 30px;
+    height: 4px;
+    background-color: $main-bl;
+    transition: 0.3s all;
+
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+//////////////////////////////////////////////////  PERSONAL
+
+// у меня был опыт в одной айти компании и они сказали что лучше не делать вложености  типо родительский блок personal  в нем personal__inner
+// для команды разработчиков будет удобнее если я буду писать так , хотя по мне нет разницы я бы мог и написать внутри класса вот так
+// .personal {
+// &__inner{code}
+//}
+//
+
+.personal {
+    margin-bottom: 73px;
+}
+
+.personal__inner {
+    @include column-center;
+}
+
+.personal__inner-image {
+    margin-bottom: 27px;
+}
+
+.personal__inner-subtitle {
+    margin-bottom: 48px;
+}
+
+.personal__form {
+    display: block;
+    text-align: center;
+    max-width: 520px;
+    width: 100%;
+}
+
+.personal__form-item {
+    position: relative;
+    margin-bottom: 25px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.personal__form-placeholder {
+    text-align: center;
+    position: absolute;
+    top: 9px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 13px;
+
+    font-weight: 400;
+    color: #adadad;
+    display: none;
+}
+
+.personal__form-input {
+    background-color: transparent;
+    width: 100%;
+    height: 60px;
+    border: 1px solid #e5e5e5;
+    outline: none;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 19px;
+
+    &:focus,
+    &:valid {
+
+        padding-top: 15px;
+        text-align: center;
+    }
+
+    &:focus {
+        border: 1px solid #435993;
+    }
+
+    &:focus+label {
+        display: block;
+    }
+
+    &:valid+label {
+        display: block;
+    }
+
+    &:focus::placeholder {
+        font-size: 0;
+        line-height: 0;
+    }
+
+    &::placeholder {
+        color: $grey;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: normal;
+    }
+}
+
+// я устал ( 
+.personal__select-template {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 321px;
+    height: 61px;
+    border: 1px solid #e5e5e5;
+    background-color: #ffffff;
+    position: relative;
+    border-radius: 5px;
+
+    &.select-focus {
+        border: 1px solid #435993;
+    }
+}
+
+.personal__select-arrow {
+    pointer-events: none;
+    position: absolute;
+    top: 27px;
+    bottom: 27px;
+    right: 20px;
+    background-image: url(../images/select-appereance.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 13px;
+    height: 8px;
+    transition: all 0.4s;
+
+    &.rotate-arrow {
+        display: block;
+    }
+}
+
+.personal__select-box {
+    cursor: pointer;
+    display: none;
+    max-width: 320px;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffff;
+    min-height: 301px;
+    padding-right: 6px;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+    padding-top: 37px;
+    padding-bottom: 32px;
+
+    &.active-box {
+        display: block;
+    }
+}
+
+.personal__select-dropdown {
+    height: 301px;
+    overflow-y: scroll;
+    background-color: #ffffff;
+
+
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: #fff;
+        width: 4px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #d9d9d9;
+        border: 2px solid #d9d9d9;
+        border-radius: 20px;
+    }
+}
+
+.personal__select-option {
+
+    color: $blue;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 36px;
+}
+
+.personal__select-value {
+    font-size: 20px;
+    font-weight: 400;
+    color: $main-bl;
+    position: absolute;
+    top: 29px;
+    left: 80px;
+    right: 80px;
+    pointer-events: none;
+}
+
+.personal__select-placeholder {
+    position: absolute;
+    top: 15px;
+    left: 80px;
+    right: 80px;
+    color: $grey;
+    font-size: 24px;
+    font-weight: 400;
+    pointer-events: none;
+
+    &.active-placeholder {
+        font-size: 14px;
+        font-weight: 400;
+        top: 8px;
+    }
+}
+
+
+
+
+//////////////////////////////////////////////////  EXPERIENCE
+
+.experience {
+    margin-bottom: 145px;
+}
+
+.experience__inner {
+    margin-bottom: 58px;
+    text-align: center;
+}
+
+.experience__inner-image {
+    margin-bottom: 30px;
+
+}
+
+.experience__inner-subtitle {
+    margin-bottom: 58px;
+}
+
+.experience__radio {}
+
+.experience__radio-box {
+    margin: 0 auto;
+    max-width: 690px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.experience__radio-item {}
+
+.experience__radio-label {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.experience__radio-name {
+    order: 2;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.experience__radio-input:checked {
+    &+div {
+        background-color: $blue;
+
+        &::after {
+            visibility: visible;
+            opacity: 1;
+            height: 9px;
+        }
+    }
+}
+
+.experience__radio-template {
+    position: relative;
+
+    &::after {
+        position: absolute;
+        content: "";
+        background-image: url(../images/radio-item.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.4s;
+        top: 5px;
+        left: 3px;
+        right: 4px;
+        width: 13px;
+        height: 0;
+    }
+
+    margin-right: 12px;
+    width: 20px;
+    height: 21px;
+    border: 1px solid #435993;
+    background-color: #ffffff;
+    order: 1;
+    border-radius: 4px;
+    transition: background-color 0.4s;
+
+    &:hover {
+        background-color: #e9efff;
+    }
+}
+
+
+//////////////////////////////////////////////////  JavaScript
+
+.javascript {
+    margin-bottom: 72px;
+}
+
+.javascript__inner {
+    text-align: center;
+}
+
+.javascript__inner-image {
+    margin-bottom: 30px;
+}
+
+.javascript__inner-subtitle {
+    margin-bottom: 47px;
+}
+
+.javascript__range {
+    margin: 0 auto;
+    position: relative;
+    max-width: 770px;
+    width: 100%;
+}
+
+.javascript__range-active {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-image: url(../images/active-range.svg);
+    max-width: 770px;
+    height: 15px;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.javascript__range-line {
+   
+    cursor: pointer;
+    max-width: 770px;
+
+    width: 100%;
+    border: 0;
+    -webkit-appearance: none;
+    outline: none;
+}
+
+.javascript__range-line::-webkit-slider-thumb {
+    -webkit-appearance: none;
+
+    margin-top: 15px;
+    width: 25px;
+    height: 28px;
+    background-image: url(../images/range-drug.svg);
+    cursor: pointer;
+}
+
+.javascript__range-line::-webkit-slider-runnable-track {
+    background-size: cover;
+    -webkit-appearance: none;
+    background-image: url(../images/not-active-range.svg);
+    max-width: 770px;
+    cursor: pointer;
+    height: 15px;
+}
+
+.javascript__marks {
+    position: relative;
+    width: 100%;
+    margin: 0 auto 16px;
+    max-width: 770px;
+
+    height: 32px;
+}
+
+.javascript__marks-item {
+    position: absolute;
+    font-size: 13px;
+    font-weight: 300;
+    text-align: left;
+
+    &:first-child {
+        left: 0;
+        bottom: 0;
+    }
+
+    &:nth-child(2) {
+        left: 25%;
+    }
+
+    &:nth-child(3) {
+        left: 50%;
+    }
+
+    &:last-child {
+        left: 80%;
+        bottom: 0;
+    }
+}
+
+
+//////////////////////////////////////////////////  ABOUT
+
+
+.about {
+    margin-top: 72px;
+    margin-bottom: 200px;
+}
+
+.about__inner {
+    text-align: center;
+}
+
+.about__inner-subtitle {
+    margin-bottom: 32px;
+}
+
+.about__inner-text {
+    margin: 0 auto 39px;
+    font-size: 16px;
+    font-weight: 300;
+
+    max-width: 500px;
+    width: 100%;
+}
+
+.about__inner-textarea {
+    width: 100%;
+    padding-left: 20px;
+    padding-top: 25px;
+    max-width: 521px;
+    min-height: 181px;
+    border: 1px solid #e5e5e5;
+    resize: none;
+    color: $main-bl;
+    font-size: 20px;
+    font-weight: 400;
+    outline: none;
+    border-radius: 4px;
+
+    &:focus {
+        border: 1px solid #435993;
+    }
+
+    &::placeholder {
+        font-weight: 400;
+        font-size: 20px;
+        color: $grey;
+    }
+}
+
+@import "media";
