--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>HI SALIK!</title>
+	<title>One page test</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/vendor.min.css">
 	<link rel="stylesheet" href="css/main.min.css">
